fix: more color contrast for block speedometer value for light themes

--- a/src/popup/block-speedometer.scss
+++ b/src/popup/block-speedometer.scss
@@ -7,6 +7,6 @@
 	}
 
 	&__label {
-		color: hsl(var(--hue) 90% 50%);
+		color: hsl(var(--hue) 90% var(--colored-value--light));
 	}
 }
